--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -70,7 +70,7 @@
                 align-items: center;
                 margin-top: 16px;
 
-                span{
+                > span{
                     font-size: 14px;
                     color: #737388;
 
@@ -85,7 +85,31 @@
                         cursor: pointer;
                     }
                 }
+
+                .user-info{
+                    display: flex;
+                    align-items: center;
+
+                    img{
+                        border-radius: 50%;
+                        height: 32px;
+                        width: 32px;
+                    }
+
+                    span{
+                        margin-left: 8px;
+                        color: #29292e;
+                        font-weight: 500;
+                        font-size: 14px;
+                    }
+                    
+                    
+                }
             }
+        }
+
+        .question-list{
+            margin-top: 32px;
         }
         
         
