--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -15,6 +15,20 @@
 
     transition: filter .2s;
 
+    &.outline{
+        border: 1px solid #835afd;
+        background-color: transparent;
+        color: #835afd;
+    
+        transition: all .2s linear;
+    
+        &:hover{
+            background-color: #835afd;
+            color: #fff;
+        }
+    
+    }
+
     &:not(:disabled):hover{
         filter: brightness(0.9);
     }
