--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -17,6 +17,16 @@
         }
     }
 
+    .buttons{
+        display: flex;
+        align-items: center;
+        gap: 16px;
+
+        button{
+            height: 40px;
+        }
+    }
+
     main{
         max-width: 800px;
         margin: 0 auto;
